--- a/extension/newtab.html
+++ b/extension/newtab.html
@@ -13,12 +13,15 @@
     <link rel="stylesheet" href="newtab.css" />
   </head>
   <body>
+    <div class="pomodoro-status" id="pomodoroStatus"></div>
+
     <div class="container">
       <div class="time" id="time"></div>
       <div class="date" id="date"></div>
       <div class="weather" id="weather"></div>
 
       <div class="search-container">
+        <div class="search-progress" id="searchProgress"></div>
         <input
           type="text"
           class="search-box"
