restructured the whole project + added timers/stopwatches

--- a/extension/index.html
+++ b/extension/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="newtab.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="pomodoro-status" id="pomodoroStatus"></div>
@@ -55,6 +55,13 @@
       </div>
     </div>
 
-    <script src="newtab.js"></script>
+    <script src="config.js"></script>
+    <script src="audio.js"></script>
+    <script src="weather.js"></script>
+    <script src="timers.js"></script>
+    <script src="display.js"></script>
+    <script src="quickLinks.js"></script>
+    <script src="commands.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
