added dice + cards :)

--- a/extension/index.html
+++ b/extension/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="pomodoro-status" id="pomodoroStatus"></div>
 
-    <div class="container">
+    <div class="container"> 
       <div class="time" id="time"></div>
       <div class="date" id="date"></div>
       <div class="weather" id="weather"></div>
@@ -36,6 +36,8 @@
         </div>
         <div class="progress-text"></div>
       </div>
+
+      <div class="probability-result" id="probabilityResult" style="display: none;"></div>
 
       <div class="quick-links" id="quickLinks"></div>
     </div>
@@ -63,5 +65,6 @@
     <script src="quickLinks.js"></script>
     <script src="commands.js"></script>
     <script src="main.js"></script>
+    <script src="probability.js"></script>
   </body>
 </html>
