added sticky notes

--- a/extension/index.html
+++ b/extension/index.html
@@ -63,6 +63,7 @@
     <script src="timers.js"></script>
     <script src="display.js"></script>
     <script src="quickLinks.js"></script>
+    <script src="notes.js"></script>
     <script src="commands.js"></script>
     <script src="main.js"></script>
     <script src="probability.js"></script>
